# alok-bollu

./: .gitignore  GA-ref.md  MODELS  README.md  makefile  tf-linreg.py  tf.py  transformers.tf.py  word2vec-tf.py
.dvc/: config
linux-kernel-copy/: .gitignore  1-sbatch-200-large-window.sh  1-sbatch-200.sh  1-sbatch-50.sh  README.md  merge.sh
my-trained-models/: .gitignore
og-word2vec/: compute-accuracy  distance  word-analogy  word2phrase  word2vec
reference-models/: .gitignore
spherical-models/: makefile  text2bin.cpp
word2blank/: .gitignore  README.md
word2blank/.ipynb_checkpoints/: sgd-steifel-checkpoint.ipynb
word2blank/cw2b/: .gitignore  1-eval.sh  1-sbatch-train-euc.sh  1-sbatch-train-pr.sh  1-sbatch-train-sg.sh  compute-accuracy  sbatch-train-euc.sh  sbatch-train-psr.sh  word-analogy  word2phrase  word2vec.c
word2blank/dataset-composition/: README.md
word2blank/fuzzontology/: tf.py
word2blank/fuzzy-wordnet/: .gitignore  README.md  fuzzy-onto.py  graph.cpp  make-graph.py  makefile  preprocess.py  set-graph.py  sim-graph.py
word2blank/glove/: demo.sh
word2blank/glove2sdp/: README.md  convex.py
word2blank/ongoing/: sdpglove.py
word2blank/paper/: README.md  tacl.bib  todo.txt
word2blank/pyw2b/: .gitignore  README.md  batch-gensim.sh  batch-train-types.sh  plotloss.py  requirements.txt  run.py  toy.py  toytf.py  word2vec-gradient-mcmc.py  word2vec-mcmc.py  word2vec-only-positive.py  word2vec-onlypositive-regularized.py  (+3 more)
word2blank/word2vec-grad/: .gitignore  1-sbatch.sh  CMakeLists.txt  makefile  word2vec.cpp
word2fuzzy/: cli.cpp
(+650 files in other folders)
